<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/confirmationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmation_number"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/raNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ra_number"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSmart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart" />

            <RadioButton
                android:id="@+id/rbTnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnt" />

            <RadioButton
                android:id="@+id/rbGlobe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/globe" />

            <RadioButton
                android:id="@+id/rbTm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tm" />
        </RadioGroup>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/submit" />

    </LinearLayout>
</layout>